--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
